--- a/img/stack/sprite.stack.html
+++ b/img/stack/sprite.stack.html
@@ -106,12 +106,17 @@ They might well be outsourced to an external stylesheet of course.
 
 <style>
  .svg-arrow-dims { width: 14px; height: 8px; }
+ .svg-arrow-white-dims { width: 14px; height: 8px; }
  .svg-cart-dims { width: 24px; height: 24px; }
  .svg-close-search-dims { width: 12px; height: 12px; }
+ .svg-facebook-dims { width: 42px; height: 42px; }
  .svg-favorite-dims { width: 26px; height: 24px; }
+ .svg-inst-dims { width: 42px; height: 42px; }
+ .svg-itemHeart-dims { width: 28px; height: 24px; }
  .svg-logo-dims { width: 112px; height: 42px; }
  .svg-persone-dims { width: 22px; height: 24px; }
  .svg-search-dims { width: 24px; height: 24px; }
+ .svg-vk-dims { width: 42px; height: 42px; }
 </style>
 
 <!--
@@ -146,6 +151,12 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>arrow, </h2>
                 </li>
+             <li title="arrow-white">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#arrow-white" class="svg-arrow-white-dims" alt="arrow-white">
+                    </div>
+                    <h2>arrow-white, </h2>
+                </li>
              <li title="cart">
                     <div class="icon-box">
                         <img src="../icons/icons.svg#cart" class="svg-cart-dims" alt="cart">
@@ -158,11 +169,29 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>close-search, </h2>
                 </li>
+             <li title="facebook">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#facebook" class="svg-facebook-dims" alt="facebook">
+                    </div>
+                    <h2>facebook, </h2>
+                </li>
              <li title="favorite">
                     <div class="icon-box">
                         <img src="../icons/icons.svg#favorite" class="svg-favorite-dims" alt="favorite">
                     </div>
                     <h2>favorite, </h2>
+                </li>
+             <li title="inst">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#inst" class="svg-inst-dims" alt="inst">
+                    </div>
+                    <h2>inst, </h2>
+                </li>
+             <li title="itemHeart">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#itemHeart" class="svg-itemHeart-dims" alt="itemHeart">
+                    </div>
+                    <h2>itemHeart, </h2>
                 </li>
              <li title="logo">
                     <div class="icon-box">
@@ -182,6 +211,12 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>search, </h2>
                 </li>
+             <li title="vk">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#vk" class="svg-vk-dims" alt="vk">
+                    </div>
+                    <h2>vk, </h2>
+                </li>
          </ul>
 
 <!--
@@ -190,7 +225,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
         </section>
         <footer>
-            <p>Generated at Sun, 07 Apr 2024 08:20:58 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Fri, 19 Apr 2024 11:38:36 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
