--- a/index.html
+++ b/index.html
@@ -38,9 +38,33 @@
 		<meta name="theme-color" content="#ffffff"> -->
 
     <title>Second Hand</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?_v=20240419143840" />
 
-    <script src="js/app.min.js" defer></script>
+    <script src="js/app.min.js?_v=20240419143840" defer></script>
+
+    <style>
+      .hero__slider-link--women {
+        background-image: url(img/hero-women.jpg);
+      }
+      .hero__slider-link--men {
+        background-image: url(img/hero-men.jpg);
+      }
+      .hero__slider-link--kids {
+        background-image: url(img/hero-kids.jpg);
+      }
+
+      @media (max-width: 1000px) {
+        .hero__slider-link--women {
+          background-image: url(img/hero-women-m.jpg);
+        }
+        .hero__slider-link--men {
+          background-image: url(img/hero-men-m.jpg);
+        }
+        .hero__slider-link--kids {
+          background-image: url(img/hero-kids-m.jpg);
+        }
+      }
+    </style>
   </head>
 
   <body>
@@ -84,7 +108,7 @@
 
     <div class="header__search">
       <form class="search" action="#">
-        <input class="search__input" type="search" />
+        <input class="search__input" type="search" required />
         <button class="search__button" type="button"></button>
         <button class="search__close" type="button"></button>
       </form>
@@ -106,29 +130,31 @@
 
 
       <main><section class="hero">
-    <div class="container hero__container">
-        <div class="hero__slider">
-            <ul class="hero__slider-wrapper">
-                <li class="hero__slider-item">
-                    <a class="hero__slider-link hero__slider-link--women" href="/category-women">
-                        <h2 class="hero__slider-title">Новые поступления блузок</h2>
-                    </a>
-                </li>
+  <div class="container hero__container">
+    <div class="hero__slider swiper">
+      <ul class="hero__slider-wrapper swiper-wrapper">
+        <li class="hero__slider-item swiper-slide">
+          <a class="hero__slider-link hero__slider-link--women" href="/category-women">
+            <h2 class="hero__slider-title">Новые поступления блузок</h2>
+          </a>
+        </li>
 
-                <li class="hero__slider-item">
-                    <a class="hero__slider-link hero__slider-link--men" href="/category-men">
-                        <h2 class="hero__slider-title">Мужские стильные рубашки</h2>
-                    </a>
-                </li>
+        <li class="hero__slider-item swiper-slide" hidden>
+          <a class="hero__slider-link hero__slider-link--men" href="/category-men">
+            <h2 class="hero__slider-title">Мужские стильные рубашки</h2>
+          </a>
+        </li>
 
-                <li class="hero__slider-item">
-                    <a class="hero__slider-link hero__slider-link--kids" href="/category-kids">
-                        <h2 class="hero__slider-title">Собираем ребенка в школу</h2>
-                    </a>
-                </li>
-            </ul>
-        </div>
+        <li class="hero__slider-item swiper-slide" hidden>
+          <a class="hero__slider-link hero__slider-link--kids" href="/category-kids">
+            <h2 class="hero__slider-title">Собираем ребенка в&nbsp;школу</h2>
+          </a>
+        </li>
+      </ul>
+
+      <div class="hero__slider-pagination"></div>
     </div>
+  </div>
 </section>
  <section class="goods">
   <div class="container goods__container">
@@ -136,7 +162,11 @@
       <article class="item">
   <picture><source srcset="img/goods-01.webp" type="image/webp"><img class="item__img" src="img/goods-01.jpg" alt="Джемпер" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Джемпер</h3>
@@ -145,13 +175,17 @@
 
     <p class="item__price">4000 ₽ <span class="item__price-old">5000 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
  <article class="item">
   <picture><source srcset="img/goods-02.webp" type="image/webp"><img class="item__img" src="img/goods-02.jpg" alt="Футболка" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Футболка</h3>
@@ -160,13 +194,17 @@
 
     <p class="item__price">3400 ₽ <span class="item__price-old">5600 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
  <article class="item">
   <picture><source srcset="img/goods-03.webp" type="image/webp"><img class="item__img" src="img/goods-03.jpg" alt="Футболка" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Футболка</h3>
@@ -175,13 +213,17 @@
 
     <p class="item__price">2300 ₽ <span class="item__price-old">4200 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
  <article class="item">
   <picture><source srcset="img/goods-04.webp" type="image/webp"><img class="item__img" src="img/goods-04.jpg" alt="Худи" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Худи</h3>
@@ -190,13 +232,17 @@
 
     <p class="item__price">4700 ₽ <span class="item__price-old">7500 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
  <article class="item">
   <picture><source srcset="img/goods-05.webp" type="image/webp"><img class="item__img" src="img/goods-05.jpg" alt="Свитер" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Свитер</h3>
@@ -205,13 +251,17 @@
 
     <p class="item__price">1800 ₽ <span class="item__price-old">3200 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
  <article class="item">
   <picture><source srcset="img/goods-06.webp" type="image/webp"><img class="item__img" src="img/goods-06.jpg" alt="Джемпер" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Джемпер</h3>
@@ -220,13 +270,17 @@
 
     <p class="item__price">5600 ₽ <span class="item__price-old">7400 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
  <article class="item">
   <picture><source srcset="img/goods-07.webp" type="image/webp"><img class="item__img" src="img/goods-07.jpg" alt="Джинсы" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Джинсы</h3>
@@ -235,13 +289,17 @@
 
     <p class="item__price">4700 ₽ <span class="item__price-old">6200 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
  <article class="item">
   <picture><source srcset="img/goods-08.webp" type="image/webp"><img class="item__img" src="img/goods-08.jpg" alt="Кожаная куртка" width="280" height="330" /></picture>
 
-  <button class="item__favorite-btn" type="button"></button>
+  <button class="item__favorite-btn" type="button">
+    <svg width="28" height="24">
+      <use xlink:href="img/icons/icons.svg#itemHeart" role="img" aria-label="Нравится" />
+    </svg>
+  </button>
 
   <div class="item__control-wrapper">
     <h3 class="item__title">Кожаная куртка</h3>
@@ -250,7 +308,7 @@
 
     <p class="item__price">7000 ₽ <span class="item__price-old">9000 ₽</span></p>
 
-    <button class="item__description-btn">Подробнее</button>
+    <button class="item__description-btn"><span class="item__description-text">Подробнее</span></button>
   </div>
 </article>
 
@@ -314,17 +372,32 @@
 
     <ul class="footer__list-contacts">
       <li class="footer__item">
-        <a class="footer__social-link footer__social-link--instagram" href="#"></a>
+        <a class="footer__social-link footer__social-link--instagram" href="#">
+          <svg class="footer__social-icon" viewBox="0 0 42 42">
+            <use xlink:href="img/icons/icons.svg#inst" role="img" aria-label="instagram"></use>
+          </svg>
+        </a>
       </li>
       <li class="footer__item">
-        <a class="footer__social-link footer__social-link--vk" href="#"></a>
+        <a class="footer__social-link footer__social-link--vk" href="#">
+          <svg class="footer__social-icon" viewBox="0 0 42 42">
+            <use xlink:href="img/icons/icons.svg#vk" role="img" aria-label="vkontakte"></use>
+          </svg>
+        </a>
       </li>
       <li class="footer__item">
-        <a class="footer__social-link footer__social-link--facebook" href="#"></a>
+        <a class="footer__social-link footer__social-link--facebook" href="#">
+          <svg class="footer__social-icon" viewBox="0 0 42 42">
+            <use xlink:href="img/icons/icons.svg#facebook" role="img" aria-label="facebook"></use>
+          </svg>
+        </a>
       </li>
     </ul>
 
-    <a class="footer__agreement" href="#">Соглашение об обработке персональных данных</a>
+    <a class="footer__agreement" href="#"
+      ><span class="footer__agreement-text">Соглашение об обработке</span>
+      <span class="footer__agreement-text">персональных данных</span></a
+    >
   </div>
 </footer>
 
